lib_LIBRARIES			= libSleipnir.a

AM_CPPFLAGS = $(LOG4CPP_CFLAGS) $(SMILE_CFLAGS) $(SVM_LIGHT_CFLAGS)

LDADD = $(LOG4CPP_LIBS) $(SMILE_LIBS) $(SVM_LIGHT_LIBS)

libSleipnir_a_SOURCES	=	\
	annotation.cpp			\
	annotationgo.cpp		\
	annotationkegg.cpp		\
	annotationmips.cpp		\
	bayesnet.cpp			\
	bayesnetfn.cpp			\
	bayesnetmixed.cpp		\
	bayesnetpnl.cpp			\
	bayesnetsmile.cpp		\
	bayesnetsmileelr.cpp	\
	clusthierarchical.cpp	\
	clustpivot.cpp			\
	clustqtc.cpp			\
	color.cpp				\
	compactmatrix.cpp		\
	database.cpp			\
	datapair.cpp			\
	datasetcompact.cpp		\
	dataset.cpp				\
	dat.cpp					\
	example.cpp				\
	file.cpp				\
	genome.cpp				\
	mathb.cpp				\
	measure.cpp				\
	meta.cpp				\
	name.cpp				\
	orthology.cpp			\
	pcl.cpp					\
	pclset.cpp				\
	propertyfile.cpp		\
	serverclient.cpp		\
	server.cpp				\
	statistics.cpp			\
	stdafx.cpp				\
	svm.cpp					\
	svm_sam.cpp				\
	xmlstring.cpp			\
	xmlvacuum.cpp			\
	xmlwriter.cpp
include_HEADERS			=	\
	annotation.h			\
	annotationi.h			\
	bayesnetfni.h			\
	bayesnet.h				\
	bayesneti.h				\
	clusthierarchical.h		\
	clusthierarchicali.h	\
	clustpivot.h			\
	clustqtc.h				\
	clustqtci.h				\
	color.h					\
	colori.h				\
	compactmatrix.h			\
	compactmatrixi.h		\
	database.h				\
	databasei.h				\
	datapair.h				\
	datapairi.h				\
	dataset.h				\
	dataseti.h				\
	dat.h					\
	dati.h					\
	examplei.h				\
	file.h					\
	filei.h					\
	fullmatrix.h			\
	genome.h				\
	genomei.h				\
	halfmatrix.h			\
	halfmatrixi.h			\
	mathb.h					\
	mathbi.h				\
	measure.h				\
	measurei.h				\
	meta.h					\
	metai.h					\
	name.h					\
	namei.h					\
	orthology.h				\
	orthologyi.h			\
	pcl.h					\
	pcli.h					\
	pclset.h				\
	pclseti.h				\
	propertyfile.h			\
	propertyfilei.h			\
	serverclient.h			\
	serverclienti.h			\
	server.h				\
	serveri.h				\
	sparsematrix.h			\
	statistics.h			\
	statisticsi.h			\
	stdafx.h				\
	svm.h					\
	svmi.h					\
	trie.h					\
	triei.h					\
	typesi.h				\
	xml.h					\
	xmlstring.h				\
	xmlstringi.h			\
	xmlvacuum.h				\
	xmlvacuumi.h			\
	xmlwriter.h				\
	xmlwriteri.h
